fixed side scrolling on mobile

--- a/styles.scss
+++ b/styles.scss
@@ -51,7 +51,6 @@ body {
   align-items: center;
   position: relative;
   margin: 0 auto;
-  overflow-x: hidden;
   max-width: 1440px;
 }
 
@@ -86,6 +85,11 @@ img {
 .container {
   padding: 0 $sm-space;
   width: 100%;
+
+  overflow: hidden;
+  @media screen and (min-width: $tablet) {
+    overflow: unset;
+  }
 }
 
 /* Component Classes */
@@ -142,6 +146,7 @@ section.hero {
   flex: 1 1 100%;
   margin-bottom: $md-space;
   position: relative;
+
   @media screen and (min-width: $tablet) {
     flex-wrap: nowrap;
   }
@@ -198,7 +203,6 @@ section.mechanical-keyboard {
   flex-wrap: wrap;
   justify-content: center;
   position: relative;
-
   margin-bottom: calc(#{$lg-space} * 2);
   & > *:last-child {
     margin-left: $sm-space;
